package com.ftn.sbnz.model.events;

public class HuntStartedEvent extends GhostEvent{

    public HuntStartedEvent(long timestamp) {
        super(timestamp);
    }

    public HuntStartedEvent() {
        super();
    }

}
