package com.ftn.sbnz.model.ghosts;

public enum ProfileWeight {
    LOW,
    MEDIUM,
    HIGH,
    DEFINITIVE
}
